syntax = "proto3";

package movie;

option go_package = "github.com/yecklilien/OMDB/movie";

service MovieAPI {
    rpc SearchMovie (SearchMovieRequest) returns (SearchMovieResponse) {}
    rpc GetMovieDetail (GetMovieDetailRequest) returns (GetMovieDetailResponse) {}
}

message SearchMovieRequest {
    string query = 1;
	int32 page = 2;
}

message SearchMovieResponse {
    repeated Movie movies = 1;
    int32 totalResult = 2;
}

message Movie {
    string title = 1;
    string year = 2;
    string imdbID = 3;
    string type = 4;
    string poster = 5;
}

message GetMovieDetailRequest {
    string imdbID = 1;
}

message GetMovieDetailResponse {
	string title = 1;      
	string year = 2; 
	string rated = 3;      
	string released = 4;   
	string runtime = 5;   
	string genre = 6;     
	string director = 7;  
	string writer = 8;     
	string actors = 9;     
	string plot = 10;       
	string language = 11;   
	string country = 12;    
	string awards = 13;    
	string poster = 14;   
	repeated Rating ratings = 15;
	string metascore = 16;  
	string imdbRating = 17;
	string imdbVotes = 18; 
	string imdbID = 19;    
	string type = 20;       
	string DVD = 21;        
	string boxOffice = 22;  
	string production = 23; 
	string website = 24;
}

message Rating {
    string source = 1;
    string value = 2;
}